完成Windows下的配置

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
 ELECTRON_MIRROR="http://npmmirror.com/mirrors/electron/"
+ELECTRON_BUILDER_BINARIES_MIRROR="http://npmmirror.com/mirrors/electron-builder-binaries/"
