--- a/package.json
+++ b/package.json
@@ -40,17 +40,12 @@
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "dayjs": "^1.11.10",
+    "electron-is-dev": "^3.0.1",
     "element-plus": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "vue-router": "^4.3.0"
-  },
-  "build": {
-    "appId": "com.linzb93.mysql",
-    "productName": "Mysql Client",
-    "mac": {
-      "icon": "public/logo.icns"
-    }
   }
 }
